--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.5.9",
+    "dayjs": "^1.9.5",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.20",
+    "socket.io-client": "^3.0.1",
     "vant": "^2.10.12",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
